samples/_failures_safe/1761510273_93084f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_206826ff.c:159:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  159 | int main
      | ^~~
